overlays/prod/istio-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-prod
  namespace: istio-system
  labels:
    app: istio-ingressgateway-prod
    istio: ingressgateway-prod
spec:
  type: NodePort
  selector:
    app: istio-ingressgateway-prod
    istio: ingressgateway-prod
  ports:
  - name: http2
    port: 80
    targetPort: 8080
    nodePort: 30889
  - name: https
    port: 443
    targetPort: 8443
